--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-1.31MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇭🇰 香港-6.23MB/s(Youtube:不良林), server: hk5.lolvps.xyz, port: 46600, type: vmess, uuid: 836fe834-4204-460d-b586-52d9bd407e8b, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /N4POVB85, ws-headers: {Host: hk5.lolvps.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.89MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20040, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 (已存活1天)中国-11.39MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.20MB/s(Youtube:不良林), server: 172.104.244.36, port: 28443, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.61MB/s(Youtube:不良林), server: 104.149.154.154, port: 25966, type: vmess, uuid: ca06e0f0-ca6e-418f-800d-97b23ba51bca, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /VTd4o3Kj/, ws-headers: {Host: 104.149.154.154}}
+  - {name: 🇯🇵 日本-20.28MB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
+  - {name: 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇬🇧 英国-283.0KB/s(Youtube:不良林), server: chunchuan-01.aikala.shop, port: 80, type: vmess, uuid: c2b378ae-6ef6-49fd-bf8e-72cd2af55de4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: chunchuan-01.aikala.shop}}
   - {name: 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林), server: v2.ssrsub.com, port: 153, type: vmess, uuid: 640e3ef0-9c44-49a8-98f6-0895b11eecd6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
-  - {name: 🇺🇸 美国-2.12MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.16MB/s(Youtube:不良林), server: hk1.ningmengshui.xyz, port: 80, type: vmess, uuid: 1e9f956b-1720-4519-b5c9-333247f6c23f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk1.ningmengshui.xyz}}
-  - {name: 🇯🇵 日本-5.02MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
-  - {name: 🇺🇸 美国-3.18MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-898.5KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.18MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
+  - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: zh01lv5us04.feiguayun.xyz, port: 33087, type: ss, cipher: aes-256-gcm, password: 5094fb82-845e-4a36-9520-e1e9f917ca13}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-11.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-283.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-11.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-283.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-11.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-283.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.23MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-11.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-283.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-11.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-283.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-11.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-283.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-11.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-283.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
