--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 (已存活1天)中国-11.39MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-3.20MB/s(Youtube:不良林), server: 172.104.244.36, port: 28443, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.61MB/s(Youtube:不良林), server: 104.149.154.154, port: 25966, type: vmess, uuid: ca06e0f0-ca6e-418f-800d-97b23ba51bca, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /VTd4o3Kj/, ws-headers: {Host: 104.149.154.154}}
-  - {name: 🇯🇵 日本-20.28MB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
-  - {name: 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇬🇧 英国-283.0KB/s(Youtube:不良林), server: chunchuan-01.aikala.shop, port: 80, type: vmess, uuid: c2b378ae-6ef6-49fd-bf8e-72cd2af55de4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: chunchuan-01.aikala.shop}}
-  - {name: 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林), server: v2.ssrsub.com, port: 153, type: vmess, uuid: 640e3ef0-9c44-49a8-98f6-0895b11eecd6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
-  - {name: 🇺🇸 美国-898.5KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.18MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
-  - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: zh01lv5us04.feiguayun.xyz, port: 33087, type: ss, cipher: aes-256-gcm, password: 5094fb82-845e-4a36-9520-e1e9f917ca13}
+  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: 104.149.154.154, port: 25966, type: vmess, uuid: ca06e0f0-ca6e-418f-800d-97b23ba51bca, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /VTd4o3Kj/, ws-headers: {Host: 104.149.154.154}}
+  - {name: 🇨🇳 中国-479.4KB/s(Youtube:不良林), server: 611hk01.fans8.xyz, port: 443, type: trojan, password: 823c10f1-8498-4978-8706-4f02008955f0, sni: 611hk01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.47MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-4.86MB/s(Youtube:不良林), server: mv-tw05.link, port: 443, type: trojan, password: s6rIg1Mkke73fwZU, sni: mv-tw05.link, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 640e3ef0-9c44-49a8-98f6-0895b11eecd6, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
+  - {name: 未知国家-1.36MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
+  - {name: 🇺🇸 美国-10.56MB/s(Youtube:不良林), server: hk12.ningmengshui.xyz, port: 80, type: vmess, uuid: 1e9f956b-1720-4519-b5c9-333247f6c23f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk12.ningmengshui.xyz}}
+  - {name: 🇺🇸 美国-3.92MB/s(Youtube:不良林), server: taobao.babazhuji.com, port: 443, type: vmess, uuid: 36712be8-f2ff-4875-8c67-95efd66ac994, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /didi, ws-headers: {Host: taobao.babazhuji.com}}
+  - {name: 🇺🇸 美国-3.33MB/s(Youtube:不良林), server: us-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-01.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 (已存活1天)中国-11.39MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-283.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 未知国家-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 (已存活1天)中国-11.39MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-283.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 未知国家-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 (已存活1天)中国-11.39MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-283.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 未知国家-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-4.86MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 (已存活1天)中国-11.39MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-283.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 未知国家-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 (已存活1天)中国-11.39MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-283.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 未知国家-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 (已存活1天)中国-11.39MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-283.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 未知国家-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 (已存活1天)中国-11.39MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-283.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 未知国家-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
